fix: data proj banner was covering whole page

--- a/src/Pages/AllProjects.module.css
+++ b/src/Pages/AllProjects.module.css
@@ -15,7 +15,7 @@
     padding-top: 6%;
     position: fixed;
     top: 0%;
-    bottom: 0%;
+    /* bottom: 0%; */
     left: 0%;
     right: 0%;
 
